--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
-    <script src="script.js"></script>
-    <title>ESA 1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ESA 1 - Interaktive animierte Scheibe</title>
+    <style>
+        #animation-container {
+            width: 200px;
+            height: 200px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-<body onload="numbers()">
+
+<body>
+<div id="animation-container">
+    <img id="rotating-disc" src="data/disc_0.png" alt="Rotierende Scheibe">
+</div>
+<script src="script.js"></script>
 </body>
+
 </html>
