--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESA 1 - Interaktive animierte Scheibe</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: beige;
+        }
         #animation-container {
+            background-color: azure;
             width: 200px;
             height: 200px;
-            margin: 0 auto;
+            margin: 2rem auto;
             text-align: center;
+            border-radius: 100%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-
+        #interaction-description {
+            background-color: azure;
+            margin-left: 30vw;
+            margin-right: 30vw;
+            padding: 2rem;
+            border-radius: 1rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
         img {
             width: 100%;
             height: auto;
@@ -23,6 +38,15 @@
 <body>
 <div id="animation-container">
     <img id="rotating-disc" src="data/disc_0.png" alt="Rotierende Scheibe">
+</div>
+<div id="interaction-description">
+    <h2>Interaktive animierte Scheibe</h2>
+    <p>Sie können die Scheibe durch Drücken der folgenden Tasten steuern:</p>
+    <ul style="list-style-type: none;">
+        <li><strong>L</strong> = Eine Drehung nach links (-15°)</li>
+        <li><strong>R</strong> = Eine Drehung nach rechts (+15°)</li>
+        <li><strong>A</strong> = Kontinuierliches Drehen (Start / Stop)</li>
+    </ul>
 </div>
 <script src="script.js"></script>
 </body>
