--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         #mario {
             width: 148px;
             height: 108px;
-            background: url('data/spritesheet_mario2.png') no-repeat;
+            background: url('data/spritesheet_mario.png') no-repeat;
             background-size: 296px 27px;
             transform-origin: top left;
             position: absolute;
