--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <ul style="list-style-type: none;">
         <li><strong>L</strong> = Eine Drehung nach links (-15°)</li>
         <li><strong>R</strong> = Eine Drehung nach rechts (+15°)</li>
-        <li><strong>A</strong> = Kontinuierliches Drehen (Start / Stop)</li>
+        <li><strong>A</strong> = Start / Stop kontinuierliches Drehen</li>
+        <li><strong>M</strong> = Start / Stop Mario Animation</li>
     </ul>
     <h2>Mario Animation</h2>
     <p>Quelle: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">https://spritedatabase.net/file/8608</a><a href="https://spritedatabase.net/file/8608">.</a></p>
