--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
             border-radius: 2rem;
             overflow: hidden;
             position: relative;
-            width: 160px;
+            width: 200px;
             height: 200px;
             margin-left: 0;
         }
 
         #mario {
+            margin-left: 9px;
             width: 148px;
             height: 108px;
             background: url('data/spritesheet_mario.png') no-repeat;
